crates/toml_edit/tests/snapshots/invalid/ext/datetime/offset-plus-minute-1digit.stderr
TOML parse error at line 1, column 33
  |
1 | foo = 1997-09-09T09:09:09.09+09:9
  |                                 ^
invalid time offset
